[package]
name = "qunet"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
flume = { version = "0.11.1", features = ["async", "spin"] }
hex = "0.4.3"
libc = "0.2.174"
nohash-hasher = "0.2.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
parking_lot = "0.12.4"
rand = "0.9.1"
s2n-quic = { version = "1.59.0", default-features = false, features = ["provider-address-token-default", "provider-tls-rustls"] }
socket2 = "0.5.10"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "io-util",
    "net",
    "rt",
    "fs",
    "signal",
    "time",
    "sync",
    "parking_lot",
] }
tokio-util = { version = "0.7.15", features = ["rt"] }
tracing = "0.1.41"
zstd = { version = "0.13.3" }
s2n-quic-rustls = "0.59.0" # Note: we should use the same version as s2n-quic does, unfortunately it does not expose this dependency
lz4_flex = { version = "0.11.5", default-features = false, features = ["checked-decode"] }
dashmap = "6.1.0"
