[package]
name = "qunet"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.2"
flume = { version = "0.11.1", features = ["async", "spin"] }
hex = "0.4.3"
libc = "0.2.174"
nohash-hasher = "0.2.0"
parking_lot = "0.12.4"
rand = "0.9.1"
s2n-quic = { version = "1.59.0", default-features = false, optional = true, features = [
    "provider-address-token-default",
    "provider-tls-rustls",
] }
socket2 = { version = "0.6.0", features = ["all"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = [
    "io-util",
    "net",
    "rt",
    "fs",
    "signal",
    "time",
    "sync",
    "parking_lot",
    "macros",
] }
tokio-util = { version = "0.7.15", default-features = false, features = ["rt"] }
tracing = "0.1.41"
lz4_flex = { version = "0.11.5", default-features = false, features = [
    "checked-decode",
] }
dashmap = { version = "6.1.0", features = ["inline"] }
heapless = "0.8.0"
zstd-safe = { version = "7.2.4", features = ["std"] }
hickory-resolver = { version = "0.25.2", optional = true }
atomic_enum = { version = "0.3.0", optional = true }
cfg-if = "^1.0.0"

[features]
default = []
quic = ["dep:s2n-quic"]
client = ["hickory-resolver", "atomic_enum"]
all = ["quic", "client"]
