[package]
name = "qunet"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.3"
flume = { version = "0.12.0", features = ["async", "spin"] }
hex = "0.4.3"
libc = "0.2.182"
nohash-hasher = "0.2.0"
parking_lot = "0.12.5"
rand = "0.10.0"
s2n-quic = { version = "1.75.0", default-features = false, optional = true, features = [
    "provider-address-token-default",
    "provider-tls-rustls",
] }
socket2 = { version = "0.6.2", features = ["all"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "io-util",
    "net",
    "rt",
    "fs",
    "signal",
    "time",
    "sync",
    "parking_lot",
    "macros",
] }
tokio-util = { version = "0.7.18", default-features = false, features = ["rt"] }
tracing = "0.1.44"
lz4_flex = { version = "0.12.0", default-features = false, features = [
    "checked-decode",
] }
dashmap = { version = "6.1.0", features = ["inline"] }
heapless = "0.9.2"
zstd-safe = { version = "7.2.4", features = ["std"] }
hickory-resolver = { version = "0.25.2", optional = true }
atomic_enum = { version = "0.3.0", optional = true }
cfg-if = "^1.0.4"
bitpiece = "2.5.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

# [[bench]]
# name = "buffer_pool_bench"
# harness = false
[[bench]]
name = "time_bench"
harness = false

[features]
default = []
quic = ["dep:s2n-quic"]
client = ["hickory-resolver", "atomic_enum"]
all = ["quic", "client"]
